--- a/zebrotech/ekart/templates/ekart/update.html
+++ b/zebrotech/ekart/templates/ekart/update.html
@@ -101,7 +101,7 @@ input[type="submit"]:hover {
 
 <div class="form-container">
     <h1>Update Data</h1>
-    <form action="" method="POST">
+    <form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Update">
